🐞 fix:删除scrollbar__view高度限制

--- a/src/styles/var.css
+++ b/src/styles/var.css
@@ -65,7 +65,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-* {
+*,
+:after,
+:before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
